# llm_novel_writer

./: LICENSE  README.md  config.py  main.py  memory_utils.py  pipeline.py  pyproject.toml  requirements.txt  sample_fairytale.txt  state_utils.py
novel_writer/: chapter_manager.py  client_setup.py  editor.py  memory_manager.py  structure_generator.py  summarizer.py  utils.py  writer.py  writer_config.py
