[project]
name = "writer-pipeline"
version = "1.0.0"
description = "Automated novel writing and editing pipeline using LLMs (Groq, Gemini, etc.)"
authors = [
  { name = "Marohan Min", email = "fragrantmaro@naver.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# 🧠 Dependencies (can also be managed in requirements.txt)
dependencies = [
  "requests",
  "openai",
  "google-generativeai",
  "pandas",
  "tqdm",
  "dataclasses-json",
  "typing-extensions",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.flake8]
max-line-length = 100
exclude = ["__pycache__", "build", "dist"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
run-writer = "main:main""